--- a/package.json
+++ b/package.json
@@ -15,15 +15,18 @@
   "author": "Prathamesh, Kunal, Atharv, Rushikesh",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.8.4",
     "body-parser": "^1.18.2",
     "connect-flash": "^0.1.1",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "express-session": "^1.15.6",
     "method-override": "^2.3.10",
     "passport": "^0.7.0",
     "passport-local": "^1.0.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "twilio": "^5.5.2"
   }
 }
